--- a/src/app/shared/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/shared/components/confirmation-modal/confirmation-modal.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>{{data}}</h1>
 <div mat-dialog-actions class="d-flex justify-content-between">
   <button mat-raised-button color="warn" (click)="close(true)">Да</button>
-  <button mat-button (click)="dialogRef.close()">Нет</button>
+  <button mat-button (click)="close()">Нет</button>
 </div>
